--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   width: 100%;
-  padding: 2rem 0; /* Ajout d'un padding vertical */
+  padding: 1rem 0; /* Ajout d'un padding vertical */
   z-index: 1000;
 }
 
@@ -12,10 +12,10 @@
   align-items: center;
   width: 75%;
   margin: 0 auto; /* Changé de 2rem auto à 0 auto */
-  padding: 1rem;
+  padding: 10px;
   background: rgba(144, 169, 255, 0.3); /* Ajusté l'opacité */
   backdrop-filter: blur(5px);
-  border-radius: 10px;
+  border-radius: var(--border-radius);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
